; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/test/esp32/extr_test_pwm.c_mcpwm_basic_config.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/test/esp32/extr_test_pwm.c_mcpwm_basic_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, double, double, i32, i32 }

@GPIO_PWMA_OUT = common dso_local global i32 0, align 4
@GPIO_PWMB_OUT = common dso_local global i32 0, align 4
@MCPWM_DUTY_MODE_0 = common dso_local global i32 0, align 4
@MCPWM_UP_COUNTER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i32)* @mcpwm_basic_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mcpwm_basic_config(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_3__, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @GPIO_PWMA_OUT, align 4
  %13 = call i32 @mcpwm_gpio_init(i32 %10, i32 %11, i32 %12)
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* @GPIO_PWMB_OUT, align 4
  %17 = call i32 @mcpwm_gpio_init(i32 %14, i32 %15, i32 %16)
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  store i32 1000, i32* %18, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 1
  store double 5.000000e+01, double* %19, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 2
  store double 5.000000e+01, double* %20, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 3
  %22 = load i32, i32* @MCPWM_DUTY_MODE_0, align 4
  store i32 %22, i32* %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 4
  %24 = load i32, i32* @MCPWM_UP_COUNTER, align 4
  store i32 %24, i32* %23, align 4
  %25 = load i32, i32* %5, align 4
  %26 = load i32, i32* %8, align 4
  %27 = call i32 @mcpwm_init(i32 %25, i32 %26, %struct.TYPE_3__* %9)
  ret void
}

declare dso_local i32 @mcpwm_gpio_init(i32, i32, i32) #1

declare dso_local i32 @mcpwm_init(i32, i32, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
